// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders OuiColorStopThumb 1`] = `
<div
  class="ouiPopover ouiPopover--anchorDownCenter ouiColorStopPopover testClass1 testClass2"
  style="left:0%"
>
  <div
    class="ouiPopover__anchor ouiColorStopPopover__anchor"
  >
    <button
      aria-disabled="false"
      aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
      aria-valuemax="24"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ouiRangeThumb ouiColorStopThumb"
      data-test-subj="ouiColorStopThumb"
      role="slider"
      style="background:rgb(255,0,0)"
      tabindex="-1"
      title="Click to edit, drag to reposition"
      type="button"
    />
  </div>
</div>
`;

exports[`renders disabled OuiColorStopThumb 1`] = `
<div
  class="ouiPopover ouiPopover--anchorDownCenter ouiColorStopPopover testClass1 testClass2"
  style="left:0%"
>
  <div
    class="ouiPopover__anchor ouiColorStopPopover__anchor"
  >
    <button
      aria-disabled="true"
      aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
      aria-valuemax="24"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ouiRangeThumb ouiColorStopThumb"
      data-test-subj="ouiColorStopThumb"
      disabled=""
      role="slider"
      style="background:rgb(255,0,0)"
      tabindex="-1"
      title="Click to edit, drag to reposition"
      type="button"
    />
  </div>
</div>
`;

exports[`renders picker-only OuiColorStopThumb 1`] = `
<div
  class="ouiPopover ouiPopover--anchorDownCenter ouiColorStopPopover testClass1 testClass2"
  style="left:0%"
>
  <div
    class="ouiPopover__anchor ouiColorStopPopover__anchor"
  >
    <button
      aria-disabled="false"
      aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
      aria-valuemax="24"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ouiRangeThumb ouiColorStopThumb"
      data-test-subj="ouiColorStopThumb"
      role="slider"
      style="background:rgb(255,0,0)"
      tabindex="-1"
      title="Click to edit, drag to reposition"
      type="button"
    />
  </div>
</div>
`;

exports[`renders readOnly OuiColorStopThumb 1`] = `
<div
  class="ouiPopover ouiPopover--anchorDownCenter ouiColorStopPopover testClass1 testClass2"
  style="left:0%"
>
  <div
    class="ouiPopover__anchor ouiColorStopPopover__anchor"
  >
    <button
      aria-disabled="false"
      aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
      aria-valuemax="24"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ouiRangeThumb ouiColorStopThumb"
      data-test-subj="ouiColorStopThumb"
      role="slider"
      style="background:rgb(255,0,0)"
      tabindex="-1"
      title="Click to edit, drag to reposition"
      type="button"
    />
  </div>
</div>
`;

exports[`renders swatch-only OuiColorStopThumb 1`] = `
<div
  class="ouiPopover ouiPopover--anchorDownCenter ouiColorStopPopover testClass1 testClass2"
  style="left:0%"
>
  <div
    class="ouiPopover__anchor ouiColorStopPopover__anchor"
  >
    <button
      aria-disabled="false"
      aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
      aria-valuemax="24"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ouiRangeThumb ouiColorStopThumb"
      data-test-subj="ouiColorStopThumb"
      role="slider"
      style="background:rgb(255,0,0)"
      tabindex="-1"
      title="Click to edit, drag to reposition"
      type="button"
    />
  </div>
</div>
`;
